--- a/modules/_admin/main/main.html
+++ b/modules/_admin/main/main.html
@@ -9,13 +9,13 @@
          {{? {{isVisibleNewGC}}}}
          <div>
             <div class="updateItem">Available new GusevCore version {{newGC}}</div>
-            <button onclick="admin.upgrade(\'upGC\');">Upgrade GusevCore</button>
+            <button onclick="admin.upgrade('upGC');">Upgrade GusevCore</button>
          </div>
          {{?}}
          {{? {{isVisibleNewGCOnline}}}}
          <div>
             <div class="updateItem">Available new GCOnline version {{newGCOnline}}</div>
-            <button onclick="admin.upgrade(\'upGCOnline\');">Upgrade GCOnline</button>
+            <button onclick="admin.upgrade('upGCOnline');">Upgrade GCOnline</button>
          </div>
          {{?}}
       </div>
